--- a/CHANGELOG
+++ b/CHANGELOG
@@ -7,11 +7,14 @@ Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
 Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
 Github: https://github.com/vaamonde
 Data de criação: 10/10/2021
-Data de atualização: 12/12/2022
-Versão: 0.87
+Data de atualização: 25/01/2023
+Versão: 0.88
 Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64
 
 ============================================= ATUALIZAÇÕES DOS SCRIPTS =============================================
+25/01/2023 - Robson Vaamonde - Atualização do script: 00-parametros.sh referente aos softwares: GLPI Help v10.0.6
+e v9.5.12, Zabbix Server Repo v6.3.1, Docker Compose v2.15.1, Rundeck v4.9.0, Graylog Repo v5.0, Nextcloud v25.0.3
+
 12/12/2022 - Robson Vaamonde - Atualização do script: 00-parametros.sh atualização da versão do OpenFire 4.7.4,
 atualização do Asterisk 20.
 
