--- a/CHANGELOG
+++ b/CHANGELOG
@@ -7,11 +7,15 @@ Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
 Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
 Github: https://github.com/vaamonde
 Data de criação: 10/10/2021
-Data de atualização: 25/01/2023
-Versão: 0.88
+Data de atualização: 25/03/2023
+Versão: 0.89
 Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64
 
 ============================================= ATUALIZAÇÕES DOS SCRIPTS =============================================
+25/03/2023 - Robson Vaamonde - Atualização do script: 00-parametros.sh referente aos softwares: GLPI Help v9.5.12,
+Guacamole Server e Client v1.5.0, Zabbix Server Repo v6.4.1, Docker Compose v2.17.1, Rundeck v4.11 e Plugin v3.2.3
+e Nextcloud v26.0.
+
 25/01/2023 - Robson Vaamonde - Atualização do script: 00-parametros.sh referente aos softwares: GLPI Help v10.0.6
 e v9.5.12, Zabbix Server Repo v6.3.1, Docker Compose v2.15.1, Rundeck v4.9.0, Graylog Repo v5.0, Nextcloud v25.0.3
 
