--- a/scripts/conf/prometheus/install.txt
+++ b/scripts/conf/prometheus/install.txt
@@ -1,5 +1,6 @@
 #Install Prometheus Ubuntu Server 20.04.3 LTS
 #Link: https://www.vultr.com/docs/install-prometheus-server-on-ubuntu-20-04/
+#Link: https://linuxhint.com/install-prometheus-on-ubuntu/
 
 mkdir -pv /etc/prometheus
 mkdir -pv /var/lib/prometheus
@@ -17,3 +18,49 @@ cp -v conf/prometheus/prometheus.service /etc/systemd/system/prometheus.service
 systemctl enable prometheus
 systemctl start prometheus
 systemctl status prometheus
+
+
+sudo groupadd --system prometheus
+sudo useradd -s /sbin/nologin --no-create-home --system -g prometheus prometheus
+sudo mkdir -pv /etc/prometheus
+sudo mkdir -pv /var/lib/prometheus
+wget https://github.com/prometheus/prometheus/releases/download/v2.43.0/prometheus-2.43.0.linux-amd64.tar.gz
+tar -zxvf prometheus-2.43.0.linux-amd64.tar.gz
+cd prometheus-2.43.0.linux-amd64
+sudo mv prometheus promtool /usr/local/bin/
+sudo mv consoles/ console_libraries/ /etc/prometheus/
+sudo mv prometheus.yml /etc/prometheus/prometheus.yml
+sudo chown -R prometheus:prometheus /etc/prometheus/  /var/lib/prometheus/
+sudo chmod -R 775 /etc/prometheus/ /var/lib/prometheus/
+sudo prometheus --version
+sudo promtool --version
+
+$ sudo nano /etc/systemd/system/prometheus.service
+
+[Unit]
+
+Description=Prometheus
+Wants=network-online.target
+After=network-online.target
+
+[Service]
+User=prometheus
+Group=prometheus
+Restart=always
+Type=simple
+ExecStart=/usr/local/bin/prometheus \
+    --config.file=/etc/prometheus/prometheus.yml \
+    --storage.tsdb.path=/var/lib/prometheus/ \
+    --web.console.templates=/etc/prometheus/consoles \
+    --web.console.libraries=/etc/prometheus/console_libraries \
+    --web.listen-address=0.0.0.0:9090
+
+[Install]
+WantedBy=multi-user.target
+
+sudo systemctl enable prometheus
+sudo systemctl start prometheus
+sudo systemctl status prometheus
+sudo journalctl -u prometheus -f --no-pager
+
+http://192.0.2.123:9090
