--- a/scripts/conf/prometheus/install.txt
+++ b/scripts/conf/prometheus/install.txt
@@ -2,40 +2,26 @@
 #Link: https://www.vultr.com/docs/install-prometheus-server-on-ubuntu-20-04/
 #Link: https://linuxhint.com/install-prometheus-on-ubuntu/
 
-mkdir -pv /etc/prometheus
-mkdir -pv /var/lib/prometheus
-wget -O prometheus.tar.gz https://github.com/prometheus/prometheus/releases/download/v2.33.1/prometheus-2.33.1.linux-amd64.tar.gz
-tar -zxvf prometheus.tar.gz
-cp -Rv prometheus*/{prometheus,promtool} /usr/local/bin/
-cp -Rv prometheus*/{consoles/,console_libraries/,prometheus.yml} /etc/prometheus/
-prometheus --version
-promtool --version
-groupadd --system prometheus
-useradd -s /sbin/nologin --system -g prometheus prometheus
-chown -Rv prometheus:prometheus /etc/prometheus/ /var/lib/prometheus/
-chmod -Rv 775 /etc/prometheus/ /var/lib/prometheus/
-cp -v conf/prometheus/prometheus.service /etc/systemd/system/prometheus.service
-systemctl enable prometheus
-systemctl start prometheus
-systemctl status prometheus
-
-
 sudo groupadd --system prometheus
 sudo useradd -s /sbin/nologin --no-create-home --system -g prometheus prometheus
 sudo mkdir -pv /etc/prometheus
 sudo mkdir -pv /var/lib/prometheus
-wget https://github.com/prometheus/prometheus/releases/download/v2.43.0/prometheus-2.43.0.linux-amd64.tar.gz
-tar -zxvf prometheus-2.43.0.linux-amd64.tar.gz
-cd prometheus-2.43.0.linux-amd64
-sudo mv prometheus promtool /usr/local/bin/
-sudo mv consoles/ console_libraries/ /etc/prometheus/
-sudo mv prometheus.yml /etc/prometheus/prometheus.yml
-sudo chown -R prometheus:prometheus /etc/prometheus/  /var/lib/prometheus/
-sudo chmod -R 775 /etc/prometheus/ /var/lib/prometheus/
+wget -O prometheus.tar.gz https://github.com/prometheus/prometheus/releases/download/v2.43.0/prometheus-2.43.0.linux-amd64.tar.gz
+tar -zxvf prometheus.tar.gz
+sudo cp -Rv prometheus*/{prometheus,promtool} /usr/local/bin/
+sudo cp -Rv prometheus*/{consoles/,console_libraries/} /etc/prometheus/
+sudo cp -Rv conf/prometheus/prometheus.yml /etc/prometheus/
+sudo cp -v conf/prometheus/prometheus.service /etc/systemd/system/prometheus.service
+sudo chown -Rv prometheus:prometheus /etc/prometheus/ /var/lib/prometheus/
+sudo chmod -Rv 775 /etc/prometheus/ /var/lib/prometheus/
 sudo prometheus --version
 sudo promtool --version
+sudo systemctl enable prometheus
+sudo systemctl start prometheus
+sudo systemctl status prometheus
+sudo journalctl -u prometheus -f --no-pager
 
-$ sudo nano /etc/systemd/system/prometheus.service
+=========================================================================================
 
 [Unit]
 
@@ -57,10 +43,3 @@ ExecStart=/usr/local/bin/prometheus \
 
 [Install]
 WantedBy=multi-user.target
-
-sudo systemctl enable prometheus
-sudo systemctl start prometheus
-sudo systemctl status prometheus
-sudo journalctl -u prometheus -f --no-pager
-
-http://192.0.2.123:9090
