--- a/NEWS
+++ b/NEWS
@@ -7,11 +7,16 @@ Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
 Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
 Github: https://github.com/vaamonde
 Data de criação: 10/10/2021
-Data de atualização: 27/10/2022
-Versão: 0.24
+Data de atualização: 30/04/2023
+Versão: 0.25
 Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64
 
 ============================================= CRIAÇÃO DE NOVOS SCRIPTS =============================================
+30/04/2023 - Robson Vaamonde - Criação do bloco de verificação das versões dos software instalados em cada scripts,
+foi utilizando os recursos do comando: dpkg-query com as opções: dpkg-query -W -f '${version}\n' software, caso o
+software não seja instalado via DPKG ou APT será utilizado os recursos de verificação de versão do software disponível
+na aplicação. 
+
 28/11/2022 - Robson Vaamonde - Estudos e criação do script: 00-nodejs.sh. é um software de código aberto, 
 multiplataforma, baseado no interpretador V8 do Google e que permite a execução de códigos JavaScript fora de um 
 navegador web. A principal característica do Node.js é sua arquitetura assíncrona e orientada a eventos.
