--- a/NEWS
+++ b/NEWS
@@ -7,17 +7,22 @@ Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
 Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
 Github: https://github.com/vaamonde
 Data de criação: 10/10/2021
-Data de atualização: 30/04/2023
-Versão: 0.25
+Data de atualização: 17/05/2023
+Versão: 0.26
 Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64
 
 ============================================= CRIAÇÃO DE NOVOS SCRIPTS =============================================
+17/05/2023 - Robson Vaamonde - Indicação do inscrito no Canal do YouTUBE: Wagner Silva - Estudos e criação do script: 
+00-zeek.sh. Zeek é uma plataforma de software de código aberto que fornece logs de transação compactos e de alta 
+fidelidade, conteúdo de arquivo e saída totalmente personalizada para analistas, desde o menor escritório doméstico 
+até as maiores e mais rápidas redes comerciais e de pesquisa.
+
 30/04/2023 - Robson Vaamonde - Criação do bloco de verificação das versões dos software instalados em cada scripts,
 foi utilizando os recursos do comando: dpkg-query com as opções: dpkg-query -W -f '${version}\n' software, caso o
 software não seja instalado via DPKG ou APT será utilizado os recursos de verificação de versão do software disponível
 na aplicação. 
 
-28/11/2022 - Robson Vaamonde - Estudos e criação do script: 00-nodejs.sh. é um software de código aberto, 
+28/11/2022 - Robson Vaamonde - Estudos e criação do script: 00-nodejs.sh. NodeJD é um software de código aberto, 
 multiplataforma, baseado no interpretador V8 do Google e que permite a execução de códigos JavaScript fora de um 
 navegador web. A principal característica do Node.js é sua arquitetura assíncrona e orientada a eventos.
 
