--- a/CHANGELOG
+++ b/CHANGELOG
@@ -7,11 +7,15 @@ Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
 Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
 Github: https://github.com/vaamonde
 Data de criação: 10/10/2021
-Data de atualização: 06/05/2023
-Versão: 0.97
+Data de atualização: 06/06/2023
+Versão: 0.98
 Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64
 
 ============================================= ATUALIZAÇÕES DOS SCRIPTS =============================================
+06/06/2023 - Robson Vaamonde - Atualização do script: 00-parametros.sh, adicionado a versão nova do Rundeck 4.13.x e
+atualizado o link de download, atualizado o Plugin do Ansible para o Rundeck para a versão v3.2.4, atualização do 
+Docker Compose para versão v2.18.1.
+
 06/05/2023 - Robson Vaamonde - Atualização do script: 00-parametros.sh, adicionado a opção de baixar o Plugin do
 Guacamole Server History Recording Storage, alteração do arquivo conf: guacamole-properties com as opções para 
 habilitar os Plugins History Recording Storage e TOTP Two-Factor Authentication.
