--- a/CHANGELOG
+++ b/CHANGELOG
@@ -14,7 +14,7 @@ Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64
 ============================================= ATUALIZAÇÕES DOS SCRIPTS =============================================
 18/06/2023 - Robson Vaamonde - Atualização do arquivo de configuração: rundeck-config-properties referente a falha de
 inicialização do serviço na versão 4.13.x, após a atualização do arquivo o acesso ao ambiente gráfico foi feito com
-sucesso.
+sucesso, criação dos arquivos de configuração do Ansible: hosts e ansible.cfg.
 
 06/06/2023 - Robson Vaamonde - Atualização do script: 00-parametros.sh, adicionado a versão nova do Rundeck 4.13.x e
 atualizado o link de download, atualizado o Plugin do Ansible para o Rundeck para a versão v3.2.4, atualização do 
