--- a/CHANGELOG
+++ b/CHANGELOG
@@ -7,11 +7,14 @@ Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
 Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
 Github: https://github.com/vaamonde
 Data de criação: 10/10/2021
-Data de atualização: 18/06/2023
-Versão: 0.99
+Data de atualização: 27/07/2023
+Versão: 1.00
 Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64
 
 ============================================= ATUALIZAÇÕES DOS SCRIPTS =============================================
+27/07/2023 - Robson Vaamonde - Atualização do arquivo de configuração: 00-paramentros.sh com as novas versões dos
+softwares: GLPI, Apache Guacamole, Prometheus, Docker Compose, Rundeck, OpenFire, OCS Inventory e Nextcloud.
+
 18/06/2023 - Robson Vaamonde - Atualização do arquivo de configuração: rundeck-config-properties referente a falha de
 inicialização do serviço na versão 4.13.x, após a atualização do arquivo o acesso ao ambiente gráfico foi feito com
 sucesso, criação dos arquivos de configuração do Ansible: hosts e ansible.cfg.
