--- a/CHANGELOG
+++ b/CHANGELOG
@@ -7,11 +7,19 @@ Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
 Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
 Github: https://github.com/vaamonde
 Data de criação: 10/10/2021
-Data de atualização: 27/07/2023
-Versão: 1.00
+Data de atualização: 14/09/2023
+Versão: 1.01
 Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64
 
 ============================================= ATUALIZAÇÕES DOS SCRIPTS =============================================
+14/09/2023 - Robson Vaamonde - Falha na atualização do repositório do Apt referente ao Source List do Grafana, falha
+referente a expiração da Chave GPG adicionada no servidor, para resolver essa falha foi adicionado novamente a chave
+GPG do Grafana com o comando: wget -q -O - https://packages.grafana.com/gpg.key | apt-key add - && sudo apt update,
+com isso a chave foi atualizada e o sources.list não apresentou mais falhas na atualização. Grande atualização do
+Servidor para a novas versões, projeto ficou parada na falha do Rundeck, retomando as atividades, grande atualização
+do script: 00-paramentros.sh com as novas versões dos softwares: Apache Guacamole, Prometheus, Docker Compose, Rundeck
+e Nextcloud. 
+
 27/07/2023 - Robson Vaamonde - Atualização do arquivo de configuração: 00-paramentros.sh com as novas versões dos
 softwares: GLPI, Apache Guacamole, Prometheus, Docker Compose, Rundeck, OpenFire, OCS Inventory e Nextcloud.
 
